<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLeaderboard"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"/>

    <ListView
        android:id="@+id/leaderboard_list"
        android:layout_width="match_parent"
        android:layout_height="404dp"/>

    <Spinner
        android:id="@+id/leaderboard_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:textSize="30sp"
        android:id="@+id/btnClear"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:textSize="30sp"
        android:id="@+id/btnBack"/>

</LinearLayout>